# gputrasher

./: .gitignore  CMakeLists.txt
src/: hello-triangle.cpp  hello-triangle.hlsl  main.cpp  utils.cpp  utils.h
